# haskell-musings

./: .gitignore  LICENSE  README.md  musings.cabal
katas/: calculator.hs
playground/: calculator.hs
