name:           musings
version:        0.1.0.0
author:         Daniel Bolivar
maintainer:     daniel.bolivar@icloud.com
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: playground
  build-depends:
      base >=4.7 && <5
      , hspec
      , split
  exposed-modules:
      Calculator
  ghc-options: -Wall -fwarn-tabs
  default-language: Haskell2010
